<?xml version="1.0" encoding="utf-8"?>

<!-- 
	Author: Shakib Small
	Year: 2016

	Quizzes.
	To implement.
	
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ADC9E6"
        android:gravity="center_vertical"
        android:minHeight="75dp" >

        <TextView
            android:id="@+id/quizesTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuizzesText1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:background="#EEEEEE"
        android:gravity="center_vertical"
        android:minHeight="75dp" >

        <TextView
            android:id="@+id/quizesTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuizzesText2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ADC9E6"
        android:gravity="center_vertical"
        android:minHeight="75dp" >

        <TextView
            android:id="@+id/quizesTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuizzesText3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

</TableLayout>
